style : enable tombol new game

--- a/index.html
+++ b/index.html
@@ -338,9 +338,9 @@
 				<div class="col-sm-3 col-sm-offset-3 col-xs-12">
 					<button type="button" class="btn btn-block btn-lg btn-success" id="applyBtn">Apply</button>
 				</div>
-				<!-- <div class="col-sm-3 col-xs-12">
-						<button type="button" class="btn btn-block btn-lg btn-warning" id="resetBtn">New Game</button>
-					</div> -->
+				<div class="col-sm-3 col-xs-12">
+					<button type="button" class="btn btn-block btn-lg btn-warning" id="resetBtn">New Game</button>
+				</div>
 			</form>
 		</div>
 		
