--- a/spectate2.html
+++ b/spectate2.html
@@ -28,7 +28,8 @@
 
         body {
             background-color: black;
-            font-size: 6em;
+            /* font-size: 6em; */
+            font-size: 7em;
             color: #00f607;
             font-family: sportsWorld;
         }
