--- a/spectate2.html
+++ b/spectate2.html
@@ -29,7 +29,7 @@
         body {
             background-color: black;
             /* font-size: 6em; */
-            font-size: 7em;
+            font-size: 7.5em;
             color: #00f607;
             font-family: sportsWorld;
         }
@@ -38,7 +38,8 @@
             color: #fc4cf8;
             font-weight: bold;
             text-align: center;
-            font-size: 2.5em;
+            /* font-size: 2.5em; */
+            font-size: 7em;
             margin-bottom: 0.75em;
         }
 
