hide tombol kembali

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		
 			<div style="display: flex; flex-direction: row; justify-content: space-between;align-items: center;">
 				<div>
-					<a href="/admin" class="btn btn-default">Kembali</a>
+					<!-- <a href="/admin" class="btn btn-default">Kembali</a> -->
 				</div>
 				<div>
 					<button data-toggle="modal" data-target="#modal-simpan" class="btn btn-success">Simpan Hasil Pertandingan</button>
