--- a/jadwal-view.html
+++ b/jadwal-view.html
@@ -89,7 +89,7 @@
             <table class="table table-striped table-bordered table-hover">
                 <thead>
                     <tr>
-                        <th class="text-pink">Match</th>
+                        <!-- <th class="text-pink">Match</th> -->
                         <th style="width: 300px;" class="text-center text-pink">Court No.#1</th>
                         <th style="width: 300px;" class="text-center text-pink">Court No.#2</th>
                         <th style="width: 300px;" class="text-center text-pink">Court No.#3</th>
@@ -101,7 +101,7 @@
                 <tbody>
                     <template v-for="(item, index) in jadwals">
                         <tr>
-                            <td>{{readableTanggal(item.tanggal)}}</td>
+                            <!-- <td>{{readableTanggal(item.tanggal)}}</td> -->
                         
                             <td style="padding: 0px;">
                                 
