--- a/control-room-index.html
+++ b/control-room-index.html
@@ -80,7 +80,8 @@
 
 <script>
 
-    const BASE_URL = "http://localhost:8080"
+    var ip = location.host;
+    const BASE_URL = "http://" + ip
 
     const {createApp} = Vue
     const app = createApp({
