--- a/jadwal-view.html
+++ b/jadwal-view.html
@@ -247,7 +247,8 @@
 
 <script>
 
-    const BASE_URL = "http://localhost:8080"
+    var ip = location.host;
+    const BASE_URL = "http://" + ip
 
     const {createApp} = Vue
     const app = createApp({
