--- a/jadwal.html
+++ b/jadwal.html
@@ -126,7 +126,8 @@
 
 <script>
 
-    const BASE_URL = "http://localhost:8080"
+    var ip = location.host;
+    const BASE_URL = "http://" + ip
 
     const {createApp} = Vue
     const app = createApp({
