--- a/spectate2.html
+++ b/spectate2.html
@@ -63,7 +63,7 @@
 </head>
 <body>
     <h1 class="header">COURT NO.XX</h1>
-    <img src="/assets/Logo.png" style="width: 200px;height: 200px;object-fit: contain;position: absolute; bottom:50px; left:50px" alt="">
+    <img src="/assets/Logo.png" style="width: 200px;height: 200px;object-fit: contain;position: absolute; top:30px; left:50px" alt="">
     <img src="/assets/tenis-ball.png" style="width: 260px;object-fit: contain;position: absolute;bottom: 0px; right: 0px;" alt="">
 
     <div class="container-fluid" style="padding: 20px 40px;">
